--- a/Visualization.ipynb
+++ b/Visualization.ipynb
@@ -101,7 +101,7 @@
     "\n",
     "def main():\n",
     "    file_number = 58  # len([name for name in os.listdir(\"208999251/source\")])\n",
-    "    paths = [\"1001030102/source/\" + str(x) for x in range(1, file_number+1)]\n",
+    "    paths = [\"data/\" + str(x) for x in range(1, file_number+1)]\n",
     "    id = np.array([])\n",
     "    date = np.array([])\n",
     "    time = np.array([])\n",
